draft as of saturday night..

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div class="container">
                 <div class="row">
                   <div class="col-sm">
-                    <a id="viewScore">View High Score <div id=score>0</div></a>
+                    <a id="viewScore">View High Score <div id="score">0</div></a>
                   </div>
                   <div class="col-sm">
                     Student Javascript Quiz
                   </div>
                   <div class="col-sm">
-                    <a id="timeLeft">Time Remaining<div id="timer">00</div></a>
+                    <a id="timeLeft">Time Remaining in seconds<div id="timer">00</div></a>
                   </div>
                 </div>
               </div>
@@ -32,13 +32,17 @@
        
         <div class="jumbotron jumbotron-fluid">
           <div class="container">
-            <h1 class="display-4"><button>Start Quiz?</button></h1>
-            <h2>Quiz question here</h2>
-              <p><button id ="answer1">answer 1</button> Answer1 text</p> <br>
-              <p></p><button id ="answer2">answer 2</button> Answer2 text</p> <br>
-              <p></p><button id ="answer3">answer 3</button> Answer3 text</p> <br>
-              <p></p><button id ="answer4">answer 4</button> Answer4 text</p> <br>
-              <button id="submitBtn">Submit</button></p></p>
+            <h1 class="display-4"><button id="startBut">Start Quiz?</button></h1>
+            <h2 id="question">Quiz question here</h2>
+              <p><button id ="answer1but">answer 1</button></p>
+              <p id="answer1"> Answer1 text</p> <br>
+              <p><button id ="answer2but">answer 2</button></p>
+              <p id="answer2"> Answer2 text</p> <br>
+              <p><button id ="answer3but">answer 3</button></p>
+              <p id="answer3"> Answer3 text</p> <br>
+              <p><button id ="answer4but">answer 4</button></p>
+              <p id="answer4"> Answer4 text</p> <br>
+              
               <p>*FEEDBACK*</p>
           </div>
         </div>
